--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -9,11 +9,24 @@
 <ion-content></ion-content>
 -->
 <ion-content>
-
+  <!--
   <img [src]="currentImage" *ngIf="currentImage">
+  -->
+  <ion-grid>
+      <ion-row>
+        <ion-col size="3" *ngFor="let photo of photoService.photos">
+          <img [src]="photo.data" />
+        </ion-col>
+      </ion-row>
+  </ion-grid>  
   
   <ion-fab vertical="bottom" horizontal="center" slot="fixed">
+    <!--
     <ion-fab-button (click)="takePicture()">
+      <ion-icon name="camera"></ion-icon>
+    </ion-fab-button>
+    -->
+    <ion-fab-button (click)="photoService.takePicture()">
       <ion-icon name="camera"></ion-icon>
     </ion-fab-button>
   </ion-fab>
